# Embedded-Sensor-Network-Randomized-ML-Inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h  base_station.h  logger.h  ml_model.h  network_manager.h  sensor.h
models/: convert_model.py  dummy_model.py  model.cc  simple_model.cc  simple_model.tflite
src/: base_station.c  heap.c  logger.c  main.c  ml_model.c  ml_model.cpp  network_manager.c  posix.c  sensor.c
